WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260638
Inform client if intercepted navigation failed
https://bugs.webkit.org/show_bug.cgi?id=260638
Summary
Inform client if intercepted navigation failed
Matthew Finkel
Reported
2023-08-23 17:21:56 PDT
Inform client if intercepted navigation failed
Attachments
Add attachment
proposed patch, testcase, etc.
Matthew Finkel
Comment 1
2023-08-23 17:22:03 PDT
rdar://105809792
Matthew Finkel
Comment 2
2023-08-23 17:45:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16999
EWS
Comment 3
2023-08-28 11:47:23 PDT
Committed
267360@main
(d417f615be0e): <
https://commits.webkit.org/267360@main
> Reviewed commits have been landed. Closing PR #16999 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug